Kiwix 0.9 rc2
* FIXED: kiwix-manage generate wrong size for splitted ZIM files (ID: 3547892)
* FIXED: kiwix-install crashes 
* FIXED: kiwix-serve memory leak on ARM (ID: 3538663)
* FIXED: open link in new tab from the right-click contextual menu (ID: 3553735)
* FIXED: Hide bookmarks sidebar in the "library view" (ID: 3555848)
* FIXED: Better landing page loading in kiwix-plug (by introducing ip forwarding)
* FIXED: Unclean Windows Registery after uninstalling (ID: 3467455)
* FIXED: Problems in creating PDF/HTML from tabs (#362)
* FIXED: Kiwix crashes on MS/Windows with "special" files (#317)
* FIXED: Better deal with *.zimaa files
* FIXED: 0.9rc1 broken Drag&Drop of files
* NEW: New supported user interface languages: Zazaki (diq), Javanese (jv),
  Khmer (km), Urdu (ur)
* NEW: improvement of the "verbose" mode in kiwix-install and kiwix-index
* NEW: CTRL+R to load random article (ID: 3549370)
* NEW: Improved server dialog window
* NEW: "Inverted colors" feature (ID: 3551975)
* NEW: Start internationalisation of kiwix-plug welcome page (en, fr, de)
* NEW: Autoredirect to the kiwix-plug localised welcome page
* NEW: Way to start search from the console with -search cmd line argument (ID: 3538176)
* NEW: Search Suggestion in kiwix-serve (ID: 2945983)
* NEW: based on recent Mozilla Gecko 14.0.1
* NEW: Desktop shortcut creation in Windows installer
* NEW: Ask to load content at the end of a download (ID: 3563964)
* NEW: if "/M/Description" empty, check "/M/Subtitle" (used by Mediawiki Collection ext.)
* NEW: Windows compilation using Visual Studio 2010
* NEW: kiwix-serve (HTTP server) for MS/Windows (#140)

Kiwix 0.9 rc1
* FIXED: Smoothier zooming (ID: 3469927)
* FIXED: "Evolution" skin (ID: 3444112)
* FIXED: Bad aria2c process mgmt. by introducing aria2 v1.14 (ID: 3430225)
* FIXED: Invisible menuitems icons on GNU/Linux
* FIXED: Blanck kiwix-serve 404 error pages (ID: 3417227)
* FIXED: Error during the installation of Ubuntu packages (ID: 3437855)